[Apple Pay] Do not add coupon code `ApplePayErrorCode` values for systems that do not support it https://bugs.webkit.org/show_bug.cgi?id=228243

Reviewed by Wenson Hsieh.

Source/WebCore:

Test: http/tests/ssl/applepay/ApplePayError.html

* Modules/applepay/ApplePayErrorCode.idl:
* Modules/applepay/ApplePayErrorCode.h:

Source/WebKit:

* Platform/cocoa/PaymentAuthorizationPresenter.mm:
(WebKit::toPKPaymentErrorCode):

LayoutTests:

* http/tests/ssl/applepay/ApplePayError.html:
* http/tests/ssl/applepay/ApplePayError-expected.txt:
* platform/ios-14-wk2/http/tests/ssl/applepay/ApplePayError-expected.txt: Added.
* platform/mac-bigsur-wk2/http/tests/ssl/applepay/ApplePayError-expected.txt: Added.


Canonical link: https://commits.webkit.org/239942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280284 268f45cc-cd09-0410-ab3c-d52691b4dbfc